# study_scheduler

./: .gitignore  LICENCE  README.md  pyproject.toml
app/: main.py
app/config/: platforms_config.json
app/domain/: study_platform.py
app/infrastructure/: browser_opener.py  platform_repository.py
app/interface/: cli_runner.py
app/use_cases/: open_platforms_in_time_range.py
